--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
