--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-image-zoom": "^1.3.1",
+    "react-img-hover-zoom": "^0.1.8",
     "react-router-dom": "^6.21.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
