--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-img-hover-zoom": "^0.1.8",
     "react-router-dom": "^6.21.0",
     "react-toastify": "^9.1.3",
+    "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
